<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#316FBA"
    tools:context=".LogActivity">

    <TextView
        android:id="@+id/LogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingMultiplier="1.1"
        android:text="@string/log_your_temp_today"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.27" />

    <EditText
        android:id="@+id/LogInputData"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/frame_style"
        android:textCursorDrawable="@drawable/cursor_style"
        android:gravity="center"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textSize="32sp"
        android:hint="@string/hint_input"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.47" />
    <!-- 上記のandroid:textCursorDrawableはカーソルの色を変えるもので、
    @drawableで参照するcursor_styleで色と太さを指定するとうまくいった。 -->

    <Button
        android:id="@+id/LogSaveButton"
        android:layout_width="124dp"
        android:layout_height="60dp"
        android:background="@drawable/shape_style"
        android:paddingBottom="2dp"
        android:text="@string/saveButton"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.576" />

    <TextView
        android:id="@+id/degreeC"
        android:layout_width="75dp"
        android:layout_height="64dp"
        android:layout_marginLeft="5dp"
        android:text="@string/degreeC"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/LogInputData"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.479" />
</androidx.constraintlayout.widget.ConstraintLayout>